--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -7,6 +7,10 @@ allprojects {
 }
 
 ext {
+
+    versionCode = 2
+    versionName = "1.2"
+
     isDebug = false //module
     //Android
     androidBuildToolsVersion = "28.0.3"
@@ -18,7 +22,7 @@ ext {
     multidexVersion = '1.0.3'
     constraintVersion = '1.1.2'
     gsyVideoVersion = '6.0.3'
-    butterKnifeVersion = '8.8.1'
+    butterKnifeVersion = '9.0.0'
     thinkerCrashReportUpgradeVersion = '1.3.6'
     tinkerandroidlibVersion = '1.9.9'
     bannerView = '1.4.10'
@@ -73,6 +77,7 @@ ext {
             gson                     : "com.google.code.gson:gson:${gsonVersion}",
             eventbus                 : "org.greenrobot:eventbus:${eventbusVersion}",
             greendao                 : "org.greenrobot:greendao:${greendaoVersion}",
+            greendaosqlcipher        : "net.zetetic:android-database-sqlcipher:3.5.7@aar",
             rxpermissions2           : "com.tbruyelle.rxpermissions2:rxpermissions:${rxpermissions2Version}",
             easypermissions          : "pub.devrel:easypermissions:${easypermissionsVersion}",
             wallelibrary             : "com.meituan.android.walle:library:${wallelibraryVersion}",
