--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,7 @@ android.enableAapt2=false
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-isModule=false
+isModuleHome=false
+isModuleUser=false
+
 
