--- a/moduleuser/build.gradle
+++ b/moduleuser/build.gradle
@@ -1,27 +1,29 @@
-if (isModule.toBoolean()) {
+if (isModuleUser.toBoolean()) {
     apply plugin: 'com.android.application'
 } else {
     apply plugin: 'com.android.library'
 }
-
+apply plugin: 'com.jakewharton.butterknife'
 android {
-    compileSdkVersion 28
-
+    def globalConfiguration = rootProject.extensions.getByName("ext")
+    compileSdkVersion globalConfiguration.androidCompileSdkVersion
+    buildToolsVersion globalConfiguration.androidBuildToolsVersion
 
     defaultConfig {
 
-        if (isModule.toBoolean()) {
+        if (isModuleUser.toBoolean()) {
             applicationId "com.example.moduleuser"
         }
-        minSdkVersion 19
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
+        minSdkVersion globalConfiguration.androidMinSdkVersion
+        targetSdkVersion globalConfiguration.androidTargetSdkVersion
+        versionCode globalConfiguration.versionCode
+        versionName globalConfiguration.versionName
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         sourceSets {
             main {
-                if (isModule.toBoolean()) {
+                if (isModuleUser.toBoolean()) {
                     manifest.srcFile 'src/main/buildApp/AndroidManifest.xml'
                 } else {
                     manifest.srcFile 'src/main/buildModule/AndroidManifest.xml'
@@ -51,6 +53,14 @@ dependencies {
     def dataDependencies = rootProject.ext.dataDependencies
     implementation androidDependencies.appcompat_v7
     implementation androidDependencies.recyclerView
+    implementation androidDependencies.design
+    implementation androidDependencies.support_v4
+    implementation androidDependencies.cardview
+    implementation androidDependencies.constraint
+
+    implementation viewDependencies.butterKnife
+    annotationProcessor viewDependencies.apt_butterKnife
+
     implementation viewDependencies.arouterapi
     annotationProcessor viewDependencies.aptaroutercompiler
 
