--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
         classpath "com.tencent.bugly:tinker-support:1.1.5"
         classpath 'com.meituan.android.walle:plugin:1.1.6'//多渠道打包
+        classpath "io.realm:realm-gradle-plugin:3.1.1"//
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
