--- a/modulehome/src/main/buildApp/AndroidManifest.xml
+++ b/modulehome/src/main/buildApp/AndroidManifest.xml
@@ -6,9 +6,9 @@
     <application
         android:name="com.example.modulebase.base.base.App"
         android:allowBackup="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/BaseAppTheme"
@@ -20,6 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PatImageViewActivity" />
+        <activity android:name=".TagLayoutActivity" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
