--- a/modulehome/src/main/buildModule/AndroidManifest.xml
+++ b/modulehome/src/main/buildModule/AndroidManifest.xml
@@ -2,12 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.modulehome">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:allowBackup="true"
         android:supportsRtl="true">
         <activity android:name=".HomeActivity">
 
         </activity>
+        <activity android:name=".PatImageViewActivity"/>
+        <activity android:name=".TagLayoutActivity"/>
+
     </application>
 
 </manifest>
