--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply from: 'tinker-support.gradle'
 apply from: 'multiple-channel.gradle'
+
 android {
     def globalConfiguration = rootProject.extensions.getByName("ext")
     compileSdkVersion globalConfiguration.androidCompileSdkVersion
@@ -38,10 +39,6 @@ android {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
         }
-        ndk {
-            //设置支持的SO库架构
-            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
-        }
     }
     buildTypes {
         release {
@@ -51,7 +48,7 @@ android {
             signingConfig signingConfigs.release
         }
         debug {
-            debuggable true
+            debuggable false
             minifyEnabled false
             signingConfig signingConfigs.debug
         }
