--- a/modulebase/build.gradle
+++ b/modulebase/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'com.jakewharton.butterknife'
+apply plugin: 'realm-android'
 android {
     def globalConfiguration = rootProject.extensions.getByName("ext")
     compileSdkVersion globalConfiguration.androidCompileSdkVersion
@@ -20,6 +21,10 @@ android {
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
             }
         }
+        ndk {
+            //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
+        }
     }
 
     buildTypes {
@@ -28,7 +33,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    packagingOptions {
+        exclude "lib/mips/librealm-jni.so"
+        exclude "lib/x86/librealm-jni.so"
+        exclude "lib/x86_64/librealm-jni.so"
+    }
     //Realm 使用这个新数据库，他们太懒了 greendao很久没有维护了
     greendao {
         schemaVersion 1
@@ -68,6 +77,9 @@ dependencies {
     api dataDependencies.gson
     api dataDependencies.rxjava2
     api dataDependencies.rxjavaandroid
+
+    api dataDependencies.dagger
+    annotationProcessor dataDependencies.daggerCompiler
 
 
 
