--- a/moduleuser/src/main/buildModule/AndroidManifest.xml
+++ b/moduleuser/src/main/buildModule/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <application
       >
-        <activity android:name=".UserActivity">
+        <activity android:name=".UserActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize">
         </activity>
     </application>
 
