--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@ android.enableAapt2=false
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 isModuleHome=false
-isModuleUser=true
+isModuleUser=false
 
 
