--- a/modulehome/src/main/buildApp/AndroidManifest.xml
+++ b/modulehome/src/main/buildApp/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <activity android:name=".PatImageViewActivity" />
         <activity android:name=".TagLayoutActivity" />
-
+        <activity android:name=".ui.V7SupportActivity" />
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.modulehome.fileprovider"
