--- a/modulehome/src/main/buildModule/AndroidManifest.xml
+++ b/modulehome/src/main/buildModule/AndroidManifest.xml
@@ -11,6 +11,7 @@
         </activity>
         <activity android:name=".PatImageViewActivity"/>
         <activity android:name=".TagLayoutActivity"/>
+        <activity android:name=".ui.V7SupportActivity" />
 
     </application>
 
