折线图 柱状图

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,7 @@ dependencies {
         implementation project(path: ':moduleuser')
     }
     implementation project(path: ':moduleCommon')
+    implementation project(path: ':MPChartLib')
 
 
 }
