--- a/modulehome/build.gradle
+++ b/modulehome/build.gradle
@@ -47,7 +47,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     def androidDependencies = rootProject.ext.androidDependencies
     def viewDependencies = rootProject.ext.viewDependencies
     def dataDependencies = rootProject.ext.dataDependencies
@@ -64,4 +63,8 @@ dependencies {
     implementation project(path: ':modulebase')
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.android.support:support-annotations:28.0.0'
+
+    api viewDependencies.navi3dmap
+    api viewDependencies.searchmap
+    api viewDependencies.locationmap
 }
