--- a/modulehome/src/main/buildApp/AndroidManifest.xml
+++ b/modulehome/src/main/buildApp/AndroidManifest.xml
@@ -20,9 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PatImageViewActivity" />
-        <activity android:name=".TagLayoutActivity" />
+        <activity android:name=".PatImageViewActivity"/>
+        <activity android:name=".TagLayoutActivity"/>
         <activity android:name=".ui.V7SupportActivity" />
+        <activity android:name=".ui.MapFogActivity" />
+        <activity android:name=".ui.GraffitiActivity" />
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.modulehome.fileprovider"
@@ -32,6 +34,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider> <!-- Bugly升级SDK配置 -->
+
     </application>
 
 </manifest>
